--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,5 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "Final Project"
-include ':app'
+include ':catapp'
 include ':nasafinalproject'
